--- a/DomasticAidManagementSystem/Views/AdminMaster/AdminDashBoard.cshtml
+++ b/DomasticAidManagementSystem/Views/AdminMaster/AdminDashBoard.cshtml
@@ -1,4 +1,4 @@
-﻿@model HEMANTH.HOME_EXPENCE.Models.AdminMaster.DashBoard
+﻿@model  DomasticAidManagementSystem.DashBoard
 @{
     Layout = "~/Views/Shared/_admin_layouy.cshtml";
 }
