--- a/DomasticAidManagementSystem/Views/UserMaster/UserDashBoard.cshtml
+++ b/DomasticAidManagementSystem/Views/UserMaster/UserDashBoard.cshtml
@@ -362,9 +362,12 @@
         </div>
         <br>
  *@  
- <br><br><br><br><br>
  <div class="row mb-4">
+            <div class="col-md-12 text-center">
 
+                <h2 class="card-title">Welcome @Context.Session.GetString("UserId")</h2>
+                       
+            </div>
             <div class="col-md-4">
                 <a href="../UserMaster/AddExpence" class="text-decoration-none">
                     <div class="card p-3 shadow-sm text-center">
@@ -394,13 +397,16 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="#" id="openPopup" class="text-decoration-none">
+                <a href="#"  class="text-decoration-none">
                     <div class="card p-3 shadow-sm text-center">
                         <div class="icon-container mb-2">
                             <i class="fas fa-download"></i>
                         </div>
                         <h5 class="card-title">Generate Bill</h5>
-                        <p class="text-muted">Bill <span id="last-bill-month"></span></p>
+                        <p class="count-number">
+                            <span class="rs-icon">Count:</span>
+                            <span id="family-expense-count">0</span>
+                        </p>
                     </div>
                 </a>
             </div>
