--- a/DomasticAidManagementSystem/Views/Login/ForgotPassword.cshtml
+++ b/DomasticAidManagementSystem/Views/Login/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model DomasticAidManagementSystem.LoginRequest
+﻿@model DomasticAidManagementSystem.Domain.Entities.User
 
 @{
     Layout = null;
